--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "nodemailer": "^6.9.15",
     "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
