--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "xlsx": "^0.18.5"
   }
 }
