--- a/Admin/package.json
+++ b/Admin/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.13.0",
     "remixicon": "^2.5.0",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
