--- a/Admin/package.json
+++ b/Admin/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.13.0",
     "remixicon": "^2.5.0",
     "socket.io-client": "^4.8.1",
